--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
+								<li><a href="https://crlsnvrro37.github.io/ChavezLuis/">LuisChavez</a></li>
+								<li><a href="https://pierocayampi.github.io/MARTES260923/">pierocayampi</a></li>
+								<li><a href="https://marianaburneo.github.io/Lab2/index.html">marianaburneo</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
