--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Grupo 3</h1>
+								<p>Les damos la bienvenida a nuestra página grupal acerca de nosotros. A continuación tendrán acceso a nuestra información al darle click al nombre de cada uno.  </p>
 							</div>
 						</div>
 						<nav>
