--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Grupo 3</h1>
+								<h1>Grupo 4 </h1>
 								<p>Les damos la bienvenida a nuestra página grupal acerca de nosotros. A continuación tendrán acceso a nuestra información al darle click al nombre de cada uno.  </p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="https://crlsnvrro37.github.io/ChavezLuis/">LuisChavez</a></li>
-								<li><a href="https://pierocayampi.github.io/MARTES260923/">pierocayampi</a></li>
-								<li><a href="https://marianaburneo.github.io/Lab2/index.html">marianaburneo</a></li>
+								<li><a href="https://crlsnvrro37.github.io/ChavezLuis/">Luis Ch</a></li>
+								<li><a href="https://pierocayampi.github.io/MARTES260923/">Piero C</a></li>
+								<li><a href="https://marianaburneo.github.io/Lab2/index.html">Mariana B</a></li>
 								<li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#contact">Ideas de productos</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -68,35 +68,7 @@
 							</article>
 
 						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</article>
+						<img src="ideas.jpg" alt="">
 
 						<!-- Elements -->
 							<article id="elements">
