grupo de lab 1.4

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							</article>
 
 						<!-- Work -->
-							<article id="Ideas de trabajo">
+							<article id="Ideas de productos">
 								<h2 class="major">Nuestros trabajos</h2>
 								<span class="image main"><img src="images/foto.jpeg" alt="" /></span>
 								<p>Estas son las ideas realizadas por cada integrante del grupo, donde creamos productos que puedan ayudar a tener un sociedad y un mundo mejor.</p>
