--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>
+								<h2 class="major">Ideas en clase</h2>
 								<span class="image main"><img src="images/foto.jpeg" alt="" /></span>
 								<p>Estas son las ideas realizadas por cada integrante del grupo, donde creamos productos que puedan ayudar a tener un sociedad y un mundo mejor.</p>
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
