--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 								<li><a href="https://crlsnvrro37.github.io/ChavezLuis/">Luis Ch</a></li>
 								<li><a href="https://pierocayampi.github.io/MARTES260923/">Piero C</a></li>
 								<li><a href="https://marianaburneo.github.io/Lab2/index.html">Mariana B</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Ideas de productos</a></li>
+								<li><a href="#work">Ideas de productor</a></li>
+								<li><a href="#about">Karla </a></li>
+								<li><a href="#contact">Manoly </a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
