--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 								<li><a href="https://pierocayampi.github.io/MARTES260923/">Piero C</a></li>
 								<li><a href="https://marianaburneo.github.io/Lab2/index.html">Mariana B</a></li>
 								<li><a href="#work">Ideas de productor</a></li>
-								<li><a href="#about">Karla </a></li>
-								<li><a href="#contact">Manoly </a></li>
+								<li><a href="https://karlaaronitan.github.io/Karla/">Karla </a></li>
+								<li><a href="https://manolydp.github.io/Manoly-Due-as/">Manoly </a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
