actualización 2.1 index.html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 								<li><a href="https://pierocayampi.github.io/MARTES260923/">Piero C</a></li>
 								<li><a href="https://marianaburneo.github.io/Lab2/index.html">Mariana B</a></li>
 								<li><a href="#work">Ideas de productor</a></li>
+								<li><a href="https://www.canva.com/design/DAFykSAQl5I/R1d7zCCamFMkqFTBQS6lHw/edit">Diagrama de Flujo </a></li>
 								<li><a href="https://karlaaronitan.github.io/Karla/">Karla </a></li>
 								<li><a href="https://manolydp.github.io/Manoly-Due-as/">Manoly </a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
