--- a/index.html
+++ b/index.html
@@ -27,13 +27,17 @@
 								<h1>Grupo 4 </h1>
 								<p>Les damos la bienvenida a nuestra página grupal acerca de nosotros. A continuación tendrán acceso a nuestra información al darle click al nombre de cada uno.  </p>
 							</div>
+							<div class="inner">
+								<h1>Idea de Equipo </h1>
+								<p> Como equipo buscamos la creación de un sensor de proximidad para personas invidentes al cual llamamos WALK, diseñado con el objetivo ayudar a navegar por su entorno con el fin de alertarles de obstáculos proximos al emitir un sonido de alerta.  </p>
+							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="https://crlsnvrro37.github.io/ChavezLuis/">Luis Ch</a></li>
 								<li><a href="https://pierocayampi.github.io/MARTES260923/">Piero C</a></li>
 								<li><a href="https://marianaburneo.github.io/Lab2/index.html">Mariana B</a></li>
-								<li><a href="#work">Ideas de productor</a></li>
+								<li><a href="#work">Ideas de productos</a></li>
 								<li><a href="https://www.canva.com/design/DAFykSAQl5I/R1d7zCCamFMkqFTBQS6lHw/edit">Diagrama de Flujo </a></li>
 								<li><a href="https://karlaaronitan.github.io/Karla/">Karla </a></li>
 								<li><a href="https://manolydp.github.io/Manoly-Due-as/">Manoly </a></li>
@@ -58,7 +62,6 @@
 								<h2 class="major">Ideas en clase</h2>
 								<span class="image main"><img src="images/foto.jpeg" alt="" /></span>
 								<p>Estas son las ideas realizadas por cada integrante del grupo, donde creamos productos que puedan ayudar a tener un sociedad y un mundo mejor.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
 							</article>
 
 						<!-- About -->
