--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
 							<div class="inner">
 								<h1>Idea de Equipo </h1>
 								<p> Como equipo buscamos la creación de un sensor de proximidad para personas invidentes al cual llamamos WALK, diseñado con el objetivo ayudar a navegar por su entorno con el fin de alertarles de obstáculos proximos al emitir un sonido de alerta.  </p>
+							        <p> Estos serían el boceto de la idea, el diagrama de flujo y las piezas que utilizaremos </p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="https://crlsnvrro37.github.io/ChavezLuis/">Luis Ch</a></li>
-								<li><a href="https://pierocayampi.github.io/MARTES260923/">Piero C</a></li>
-								<li><a href="https://marianaburneo.github.io/Lab2/index.html">Mariana B</a></li>
-								<li><a href="#work">Ideas de productos</a></li>
-								<li><a href="https://www.canva.com/design/DAFykSAQl5I/R1d7zCCamFMkqFTBQS6lHw/edit">Diagrama de Flujo </a></li>
+								<li><a href="https://crlsnvrro37.github.io/ChavezLuis/">Luis </a></li>
+								<li><a href="https://pierocayampi.github.io/MARTES260923/">Piero </a></li>
+								<li><a href="https://marianaburneo.github.io/Lab2/index.html">Mariana </a></li>
+								<li><a href="#work"> Propuestas de Ideas </a></li>
 								<li><a href="https://karlaaronitan.github.io/Karla/">Karla </a></li>
 								<li><a href="https://manolydp.github.io/Manoly-Due-as/">Manoly </a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
