--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
 								<p>Les damos la bienvenida a nuestra página grupal acerca de nosotros. A continuación tendrán acceso a nuestra información al darle click al nombre de cada uno.  </p>
 							</div>
 							<div class="inner">
-								<h1>Idea de Equipo </h1>
+								<h1>Misión de Grupo </h1>
 								<p> Como equipo buscamos la creación de un sensor de proximidad para personas invidentes al cual llamamos WALK, diseñado con el objetivo ayudar a navegar por su entorno con el fin de alertarles de obstáculos proximos al emitir un sonido de alerta.  </p>
 							        <p> Estos serían el boceto de la idea, el diagrama de flujo y las piezas que utilizaremos </p>
+								<p>  </p>
 							</div>
 						</div>
 						<nav>
