--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 								<h1>Misión de Grupo </h1>
 								<p> Como equipo buscamos la creación de un sensor de proximidad para personas invidentes al cual llamamos WALK, diseñado con el objetivo ayudar a navegar por su entorno con el fin de alertarles de obstáculos proximos al emitir un sonido de alerta.  </p>
 							        <p> Estos serían el boceto de la idea, el diagrama de flujo y las piezas que utilizaremos </p>
-								<p>  </p>
+								<p> <img src="Diagrama.jpg" alt="DiagramadeFlujo" /> </p>
+								<p> <img src="Piezas.jpg" alt="PiezasdeSistema" /> </p>
 							</div>
 						</div>
 						<nav>
