--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
 							        <p> Estos serían el boceto de la idea, el diagrama de flujo y las piezas que utilizaremos </p>
 								<a href="https://www.canva.com/design/DAFykSAQl5I/R1d7zCCamFMkqFTBQS6lHw/edit"> Diagrama y Piezas </a>
 							</div>
+							<div class="inner">
+								<h1>Programación y prueba de sensor </h1>
+								<p> Con los componentes ya en nuestra posesión, se procedio al armado del sistema del sensor de proximidad y del mismo modo la programación del mismo para su
+									correcto funcionamiento.  </p>
+								<p><span class="image main"><img src="Sensor_Movimiento.jpeg" alt="" /></span></p>
+							        <p> Enlazamos un enlace que incluye un video con la prueba del sensor </p>
+								<a href="https://www.canva.com/design/DAF1gZPuseQ/lV2OoCS3_pbOzXMVWTj17w/edit"> Test de Sensor </a>
+							</div>
 						</div>
 						<nav>
 							<ul>
