--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
 								<p> Con los componentes ya en nuestra posesión, se procedio al armado del sistema del sensor de proximidad y del mismo modo la programación del mismo para su
 									correcto funcionamiento.  </p>
 								<p>
-									<img height="400" width="300" src="Sensor_Movimiento.jpeg"></img>
+									<img height="400" width="300" src="Sensor_Movimiento.jpeg">
 								</p>
+								</div>
+							<div class="inner">
 							        <h1>Video prueba de sensor </h1>
 								<p> Enlazamos un enlace que incluye un video con la prueba del sensor </p>
 								<a href="https://www.canva.com/design/DAF1gZPuseQ/lV2OoCS3_pbOzXMVWTj17w/edit"> Test de Sensor </a>
