--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 								<p> Con los componentes ya en nuestra posesión, se procedio al armado del sistema del sensor de proximidad y del mismo modo la programación del mismo para su
 									correcto funcionamiento.  </p>
 								<p>
+									<img height="400" width="300" src="Codigo_Arduino.jpg">
+								</p>
+								<p>
 									<img height="400" width="300" src="Sensor_Movimiento.jpeg">
 								</p>
 								</div>
