--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								</div>
 							<div class="inner">
 							        <h1>Video prueba de sensor </h1>
-								<p> Enlazamos un enlace que incluye un video con la prueba del sensor </p>
+								<p> Dejamos un enlace el cual los llevara a un video donde se hace un test del sensor </p>
 								<a href="https://www.canva.com/design/DAF1gZPuseQ/lV2OoCS3_pbOzXMVWTj17w/edit"> Test de Sensor </a>
 							</div>
 						</div>
