--- a/index.html
+++ b/index.html
@@ -37,13 +37,8 @@
 								<h1>Programación y armado de sensor </h1>
 								<p> Con los componentes ya en nuestra posesión, se procedio al armado del sistema del sensor de proximidad y del mismo modo la programación del mismo para su
 									correcto funcionamiento.  </p>
-								<p>
-									<img height="400" width="300" src="Codigo_Arduino.jpg">
-								</p>
-								<p>
-									<img height="400" width="300" src="Sensor_Movimiento.jpeg">
-								</p>
-								</div>
+								<p> En el siguiente enlace se presenta el codigo del arduino y el sensor ya armado </p>
+								<a href="https://www.canva.com/design/DAF1guXQsG8/qFccdlCSEu6A6NXNTzI5Zw/edit"> Codigo y Armado de Sensor </a>
 							<div class="inner">
 							        <h1>Video prueba de sensor </h1>
 								<p> Dejamos un enlace el cual los llevara a un video donde se hace un test del sensor </p>
