--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 								<p> Dejamos un enlace el cual los llevara a un video donde se hace un test del sensor </p>
 								<a href="https://www.canva.com/design/DAF1gZPuseQ/lV2OoCS3_pbOzXMVWTj17w/edit"> Test de Sensor </a>
 							</div>
+								<div class="inner">
+							        <h1>Prototipo, Diseño y Modelo Final </h1>
+								<p> Las imagenes correspondientes se encontraran en el siguiente enlace </p>
+								<a href="https://www.canva.com/design/DAF1gpzeOJU/GO7dhBVMmPBywRWgCHsMDQ/edit"> Enlace final </a>
+							</div>
 						</div>
 						<nav>
 							<ul>
