--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>GRUPO 4</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -39,8 +39,6 @@
 									correcto funcionamiento.  </p>
 								<p> En el siguiente enlace se presenta el codigo del arduino y el sensor ya armado </p>
 								<a href="https://www.canva.com/design/DAF1guXQsG8/qFccdlCSEu6A6NXNTzI5Zw/edit"> Codigo y Armado de Sensor </a>
-							<div class="inner">
-							        <h1>Video prueba de sensor </h1>
 								<p> Dejamos un enlace el cual los llevara a un video donde se hace un test del sensor </p>
 								<a href="https://www.canva.com/design/DAF1gZPuseQ/lV2OoCS3_pbOzXMVWTj17w/edit"> Test de Sensor </a>
 							</div>
