--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Grupo 4. Laboratorio 2: 2023.</p>
 					</footer>
 
 			</div>
