--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
 								<p> Las imagenes correspondientes se encontraran en el siguiente enlace </p>
 								<a href="https://www.canva.com/design/DAF1gpzeOJU/GO7dhBVMmPBywRWgCHsMDQ/edit"> Enlace final </a>
 							</div>
+							</div>
+								<div class="inner">
+							        <h1> Inforgrafía y video del proyecto </h1>
+								<p> El siguiente enlace los llevara a observar la infografía y el video correspondiente </p>
+								<a href="https://www.canva.com/design/DAF21Xy7s_M/zxnKs2UrFyoQC4gKoON4MA/edit"> Enlace final </a>
+							</div>
 						</div>
 						<nav>
 							<ul>
