--- a/index.html
+++ b/index.html
@@ -43,15 +43,10 @@
 								<a href="https://www.canva.com/design/DAF1gZPuseQ/lV2OoCS3_pbOzXMVWTj17w/edit"> Test de Sensor </a>
 							</div>
 								<div class="inner">
-							        <h1>Prototipo, Diseño y Modelo Final </h1>
+							        <h1>Prototipo, Diseño y Presentación Final </h1>
 								<p> Las imagenes correspondientes se encontraran en el siguiente enlace </p>
-								<a href="https://www.canva.com/design/DAF1gpzeOJU/GO7dhBVMmPBywRWgCHsMDQ/edit"> Enlace final </a>
-							</div>
-							</div>
-								<div class="inner">
-							        <h1> Inforgrafía y video del proyecto </h1>
-								<p> El siguiente enlace los llevara a observar la infografía y el video correspondiente </p>
-								<a href="https://www.canva.com/design/DAF21Xy7s_M/zxnKs2UrFyoQC4gKoON4MA/edit"> Enlace final </a>
+								<a href="https://www.canva.com/design/DAF1gpzeOJU/GO7dhBVMmPBywRWgCHsMDQ/edit"> Prototipo y Diseño </a>
+								<a href="https://www.canva.com/design/DAF21Xy7s_M/zxnKs2UrFyoQC4gKoON4MA/edit"> Presentación Final </a>
 							</div>
 						</div>
 						<nav>
