--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
 								<a href="https://www.canva.com/design/DAF1gZPuseQ/lV2OoCS3_pbOzXMVWTj17w/edit"> Test de Sensor </a>
 							</div>
 								<div class="inner">
-							        <h1>Prototipo, Diseño y Presentación Final </h1>
+							        <h1>Prototipo, Diseño, infografía y Video presentación </h1>
 								<p> Las imagenes correspondientes se encontraran en el siguiente enlace </p>
 								<a href="https://www.canva.com/design/DAF1gpzeOJU/GO7dhBVMmPBywRWgCHsMDQ/edit"> Prototipo y Diseño </a>
-								<a href="https://www.canva.com/design/DAF21Xy7s_M/zxnKs2UrFyoQC4gKoON4MA/edit"> Presentación Final </a>
+								<p><a href="https://www.canva.com/design/DAF21Xy7s_M/zxnKs2UrFyoQC4gKoON4MA/edit"> Infografía </a></p>
+								<p><a href="https://www.canva.com/design/DAF21Xy7s_M/zxnKs2UrFyoQC4gKoON4MA/edit"> Video presentación </a></p>
 							</div>
 						</div>
 						<nav>
