--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<p> Las imagenes correspondientes se encontraran en el siguiente enlace </p>
 								<a href="https://www.canva.com/design/DAF1gpzeOJU/GO7dhBVMmPBywRWgCHsMDQ/edit"> Prototipo y Diseño </a>
 								<p><a href="https://www.canva.com/design/DAF21Xy7s_M/zxnKs2UrFyoQC4gKoON4MA/edit"> Infografía </a></p>
-								<p><a href="https://www.canva.com/design/DAF21Xy7s_M/zxnKs2UrFyoQC4gKoON4MA/edit"> Video presentación </a></p>
+								<p><a href="https://youtu.be/TB52TxmuyAc"> Video presentación </a></p>
 							</div>
 						</div>
 						<nav>
